--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ getProject().setBuildDir('gradleBuild')
 
 project.ext.ASSET_DIR = projectDir.toString() + '/assets'
 
-assert file(project.ext.ASSET_DIR + "/rounded_graph.pb").exists()
+assert file(project.ext.ASSET_DIR + "/optimized.pb").exists()
 assert file(project.ext.ASSET_DIR + "/retrained_labels.txt").exists()
 
 buildscript {
@@ -61,7 +61,7 @@ android {
             }
 
             dependencies {
-                compile 'org.tensorflow:tensorflow-android:1.2.0-preview'
+                compile 'org.tensorflow:tensorflow-android:1.3.0'
             }
 
         }
