--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,8 +28,8 @@
         android:targetSdkVersion="25" />
 
     <!--                   android:screenOrientation="portrait" -->
+    <!--         android:debuggable="true" -->
     <application android:allowBackup="true"
-        android:debuggable="true"
         android:label="@string/app_name"
         android:icon="@mipmap/ic_launcher"
         android:theme="@style/MaterialTheme">
