--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,12 +16,14 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.tensorflow.demo">
+    package="org.steffen.roady"
+    android:versionCode="2"
+    android:versionName="0.0.2">
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <!--uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/ -->
 
     <uses-sdk
         android:minSdkVersion="21"
@@ -34,7 +36,7 @@
         android:icon="@mipmap/ic_launcher"
         android:theme="@style/MaterialTheme">
 
-        <activity android:name="org.tensorflow.demo.FCNPredictActivity"
+        <activity android:name="org.steffen.roady.FCNPredictActivity"
                   android:screenOrientation="landscape"
                   android:label="@string/app_name">
             <intent-filter>
